mapentity/static/mapentity/style.css
body {
    height: 100%;
    width: 100%;
    position: absolute;
    padding: 0; margin: 0;
}

.container-fluid {
    padding-left: 0;
    padding-right: 0;
}

/***** SPAN 6 *****/
.row-fluid > .span6 > .pull-right {
	margin-top: 5px;
	/*margin-right: 5px;*/
	padding-right: 12px;

}

/***** Bootstrap customizations ******/

.groupfields {
    margin-bottom: 15px;
}

.dropdown-menu {
    z-index: 9999;
}

/***** Reusables ******/

.centered {
	text-align: center;
}

.autohide {
    display: none;
}

.scrollable {
    overflow-y: auto;
    clear: both;
}

/***** Alerts ******/

#alert-box {
	position: absolute; 
	top: 3px; 
	left: 50%; 
	width: 50%; 
	margin: 0 0 0 -25%;
	z-index: 1000;
}

#alert-box li.alert {
    list-style-type: none; margin-bottom: 3px;
}

/**** Navigation bar ****/

#entitylist-dropdown {
    margin-right: 5px;
}

.navbar {
    margin-bottom: 0px;
}

.navbar .brand {
    padding-top: 7px;
    padding-right: 5px;
}

.navbar-inner {
    padding-left: 5px;
    padding-right: 5px;
    border: 0px;
    border-bottom: 1px solid #d4d4d4;

    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;

    -moz-box-shadow: 0 0px 0px;
    -webkit-box-shadow: 0 0px 0px;
    box-shadow: 0 0px 0px;
}

.navbar .nav > li.history > a,
.navbar .nav > li.history button:first-child {
    padding-left: 18px;
    padding-right: 10px;
}

.navbar .nav > li.history.active > a,
.navbar .nav > li.history.active > a:hover,
.navbar .nav > li.history > a:hover {
    border-bottom: 1px solid white;
    margin-bottom: -1px;
    border-left: 1px solid #d4d4d4;
    border-right: 1px solid #d4d4d4;
    background-color: white;
    box-shadow: 0px -3px 3px 1px rgba(0, 0, 0, 0.125);
}

.navbar .nav > li.history > a,
.navbar .nav > li.history button:first-child {
    background-position-x: 2px;
    background-position-y: 50%; 
    background-repeat: no-repeat;
}

.navbar .nav > li.history.first > a {
    font-weight: bolder;
    font-size: 16px;
}

.navbar .nav .close {
    float: none;
}

/**** Maps ****/

.leaflet-container {
    min-height: 600px;
}

.map-error {
    border: 5px solid red;
}

div.marker-snapped { background: yellow !important; }
img.marker-add { background-image: url('images/marker-add.png') }
img.marker-snapped { background-image: url('images/marker-snap.png') }
img.marker-source { background-image: url('images/osrm_markers/marker-source.png') }
img.marker-source.marker-snapped { background-image: url('images/osrm_markers/marker-source-snap.png') }
img.marker-target { background-image: url('images/osrm_markers/marker-target.png') }
img.marker-target.marker-snapped { background-image: url('images/osrm_markers/marker-target-snap.png') }

img.marker-via { background-image: url('images/osrm_markers/marker-via.png') }
img.marker-via.marker-snapped { background-image: url('images/osrm_markers/marker-via-snap.png') }

/* snap drag */
img.marker-drag { background-image: url('images/osrm_markers/marker-drag.png') }

.leaflet-control-draw.enabled a, .leaflet-control.enabled a {
 	background-color: #fff;
}

.leaflet-control-draw.enabled, .leaflet-control.enabled {
 	background-color: rgba(255, 255, 0, 0.6);
}

.leaflet-control.disabled a {
 	background-color: rgba(0, 0, 0, 0.25);
}

.leaflet-control-draw-measure {
	background-image: url(images/measure-control.png);
}

.multipath-control {
    background-image: url(images/multipath-control.png);
}

.screenshot-control {
    background-image: url(images/screenshot-control.png);
}

/**** Widgets ****/

.axislabel {
	color: blue;
	font-size: 10px;
}

tr.selected-row td {
    /* Button green color #5BB75B */
    background-color: #DF8 !important;
    opacity: 1 !important;
}

.filter-set {
    font-weight: bold;
    border: 2px solid black !important;
    color: black;
}

#maphead {
    position: absolute;
    padding-top: 3px;
    z-index: 999;
    width: 100%;
}

/* Layout (based on "Conflicting position" trick) */
#container {position: absolute; top: 39px; bottom: 0; left: 0; right: 0;}
#panelleft {position: absolute; top: 2px; bottom: 0; width: 50%; left: 0;}
#panelright {position: absolute; top: 2px; bottom: 0; width: 50%; right: 0;}

#mainmap {position: absolute; top: 0px; bottom: 0px; left: 0px; right: 0px;}


.map-panel.detail {position: absolute; top: 0px; bottom: 0px; right: 0px;}
#detailmap {height: 100%;}


/***** Entity List ******/

#list-panel {
    margin-left: 60px;
    padding: 4px;
    height: 95%;
}

#list-panel .table th, 
#list-panel .table td {
    padding: 5px;
    white-space: nowrap;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
}
#list-panel .pagination a, .pagination span {
    line-height: 30px;
}


/* Left menu */
#entitylist {
    position: absolute;
    top: 0px;
    left: 0;
    width: 60px;
}

#entitylist li img {
    opacity: 0.3;
}

#entitylist li.active img, #entitylist li a:hover img {
    opacity: 1.0;
}

#entitylist a {
    padding: 0px;
}

#entitylist .nav-pills.nav-stacked > li > a {
    margin-bottom: 0;
}

#entitylist .nav-pills > li > a {
	border-radius: 0px;
	-moz-border-radius: 0px;
	border-bottom: 1px solid #DDDDDD;
	border-right: 1px solid #DDDDDD;
	margin-bottom: 0px;
	margin-top: 0px;
	background-color: #F3F3F3;
}

#entitylist .nav-pills > .active > a, 
#entitylist .nav-pills > .active > a:hover {
    border-right: 1px solid #fff;
    background-color: #fff;
    color: #333333;
}

#entitylist .nav-pills > li > a > img  {
	padding-bottom: 4px;
}






/* Datatables customization for filters and pagination */
.dataTables_wrapper {
    height: inherit;
}

#list-download-toolbar, 
#objects-list_filter, 
div.dataTables_paginate { 
    position: absolute;
    bottom: 5px;
}
div.dataTables_paginate { 
    bottom: 0px;
}

#list-download-toolbar {
    padding-bottom: 10px;
}

div.dataTables_paginate {
    right: 5px;
}

#objects-list_filter {
    left: 160px;
}


/* Filters popover */

#mainfilter label {
    display: none;
}

#filters-panel .well {
    padding: 5px;
}

#filters-panel form {
    margin-bottom: 0px;
}

.popover {
    border: 5px solid rgba(0, 0, 0, 0.5);
    font-size: 14px;
}

span.filter-info {
    font-weight: bold;
}


/***** Entity detail ******/


.details-panel {
    padding-left: 40px;
}

.details-panel .table { 
    table-layout: fixed; 
    margin-right: 10px;
}

.details-panel .table th {
    width: 40%;
}

.details-panel h3 {
	border-bottom: 1px solid #333333;
}

.details-panel td {
	color: #636363;
}

.details-panel th, .details-panel td {
    border-top: 0px;
    border-bottom: 1px solid #DDDDDD;
}

.details-panel td ul li {
    list-style: none;
}

.details-panel span.none {
	opacity: 0.4;
}

.details-panel td .autohide {
    float: right;
}

.details-panel td ul {
	margin: 0px;
}

.details-panel td p {  /* Autohide add buttons within <p> */
    margin: 0px;
}

#details-body {
    padding-right: 10px;
}

.download-group {
    clear: both;
    line-height: 35px;
    display: block;
    height: 35px;
}

.details-panel .nav-tabs li.active a {
    background-color: rgba(255,255,255,0.9);
}


/***** Entity form ******/

.form-panel {
    margin-top: 10px;
}

.form-panel form {
    padding-left: 10px;
    margin-bottom: 0px;
}

.form-panel .form-actions {
    position: absolute;
    bottom: 0px;
    left: 0px;
    right: 0px;
    margin: 0px;
    padding: 10px;
    height: 30px;
}

.form-panel #modelfields {
    margin-bottom: 55px;
}

.form-panel .tab-content .nav { 
    margin-bottom: 5px;
}

.form-panel .nav li:first-child {
    margin-left: 160px;
}

.form-panel .tab-content .nav-pills li a {
    padding-top: 2px;
    padding-bottom: 2px;
}

.form-panel .nav-tabs .error {
    color: #B94A48;
}

#geomfield {
    position: absolute;
    top: 2px;
    bottom: 51px;
    right: 0px;
}
#geomfield .leaflet-container,
#geomfield .control-group,
#geomfield .controls {
    height: 100%;
}

/* Tired of bootstrap ? 
TODO: please help;
 */
#modelfields.span4 {
    width: 33%;
}
#geomfield.span8 {
    width: 66%;
}

.form-horizontal #geomfield .controls {
    margin-left: 0px;
}

#geomfield label {
    position: absolute;
    z-index: 2000;
    background-color: rgba(255,255,255,0.7);
    padding: 5px;
    border-radius: 5px;
    top: 5px;
    left: 5px;
}

label.requiredField {
    font-weight: bold;
}

.help-inline {
    font-size: 0.7em;
}

.form-horizontal .control-group {
    margin-bottom: 5px;
}

.form-row.inline.controls {
    border: solid 1px lightgray;
    padding: 5px;
    margin: 1px;
}

.form-row.inline.controls:last-of-type {
    border: none;
}

